# gorilla-app

./: .gitignore  LICENSE  README.md  SECURITY.md  SUBMISSION.md  TECHNICAL.md
backend/: pyproject.toml
backend/agentforge/: __init__.py  __main__.py  agent.py  cli.py  decision.py  detector.py  forge_client.py  privy_http.py  privy_policy.py  settlement.py  solana_rpc.py  txline_feed.py  wallets.py  watch.py
backend/gorilla/: __init__.py  __main__.py  agent.py  cli.py  decision.py  detector.py  fixtures.py  forge_client.py  insurance_client.py  privy_http.py  privy_policy.py  settlement.py  solana_rpc.py  staking.py  txline_feed.py  txodds_session.py  wallet.py  wallets.py  watch.py  web_export.py
backend/gorilla/spec/: txline_openapi.yaml
backend/scripts/: e2e_settlement.py  e2e_settlement_privy.py  export_web_artifacts.py  live-engine-settlements.json  live-insurance-settlement.json  live_engine_demo.py  live_insurance_demo.py  privy_setup.py  profile_surfpool.py  surfpool_rehearse.sh
backend/tests/: test_agent.py  test_decision.py  test_detector.py  test_e2e_devnet.py  test_fixtures.py  test_forge_client.py  test_history_replay.py  test_insurance_client.py  test_market_label.py  test_privy_policy.py  test_solana_rpc_guard.py  test_staking.py  test_txline_feed.py  test_txodds_session.py  test_wallet.py  test_wallets.py  test_watch.py  test_web_export.py
docs/: AGENT.md  SETTLEMENT-ENGINE-FRONTEND.md  SETTLEMENT-ENGINE.md  SETTLEMENT.md  TESTING.md  demo-narration.md  demo-script.md  positioning.md  recording-guide.md
docs/demo/: agent_settlement.cast  settlement_engine.cast
docs/demo-assets/: beat1-sportsbook-mockup.html
frontend/: .env.local.example  README.md  package.json  pnpm-lock.yaml
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/agent/: page.tsx
frontend/app/settlement/: page.tsx
frontend/app/track-record/: page.tsx
frontend/components/agent/: agent-dashboard.tsx  odds-feed.tsx  policy-panel.tsx
frontend/components/hero/: flow-pipeline.tsx  hero-flow-canvas.tsx  hero-market-card.tsx  live-devnet-stats.tsx  poster-hero.tsx  trust-badge.tsx
frontend/components/home/: how-it-works.tsx  one-engine-section.tsx  problem-section.tsx  proof-section.tsx
frontend/components/layout/: footer-clock.tsx  logo.tsx  network-badge.tsx  page-header.tsx  site-footer.tsx  site-nav.tsx
frontend/components/settlement/: claim-panel.tsx  market-summary.tsx  merkle-proof-viewer.tsx  network-banner.tsx  open-market-panel.tsx  place-bet-panel.tsx  proof-path.tsx  settlement-activity.tsx  settlement-view.tsx
frontend/components/shared/: explorer-link.tsx  hash-chip.tsx
frontend/components/track/: track-record.tsx  wallet-pnl.tsx
frontend/components/ui/: badge.tsx  button.tsx  card.tsx  collapsible.tsx  tabs.tsx  tooltip.tsx
frontend/components/wallet/: connect-button.tsx  wallet-provider.tsx
frontend/data/: agent-policy.json  agent-replay.json
frontend/hooks/: use-agent-bet.ts  use-cluster.ts  use-fixture-participants.ts  use-instruction-flow.ts  use-linked-market.ts  use-markets.ts  use-replay.ts
frontend/lib/: format.ts
frontend/lib/agent/: manifest.ts  policy.ts  replay.ts  scenario.ts
frontend/lib/mongo/: client.ts  fixtures.ts  odds.ts  replay.ts  respond.ts  types.ts
frontend/lib/rpc/: cache.ts  forward.ts  upstream.ts
frontend/lib/solana/: borsh.ts  cluster.ts  config.ts  confirm.ts  connection.ts  forge-client.ts  markets.ts  open-market.ts  payout.ts  predicate.ts  proof.ts  recorded-proof.json  share.ts
frontend/scripts/: dump-fixtures.mjs  probe-decode.mjs
frontend/tests/: agent-replay.test.ts  cache.test.ts  claim.test.ts  cluster.test.ts  config.test.ts  confirm.test.ts  connection.test.ts  fixtures.ts  forge-client.test.ts  forward.test.ts  markets.test.ts  open-market.test.ts  payout.test.ts  predicate.test.ts  route.test.ts  share.test.ts  upstream.test.ts
program/: Anchor.toml  Cargo.toml  README.md
program/demo/: record-engine-test.sh
program/programs/forge-insurance/src/: lib.rs
program/programs/forge-markets/: Cargo.toml
program/programs/forge-markets/src/: errors.rs  interface.rs  lib.rs  state.rs  txoracle_cpi.rs
program/programs/forge-markets/src/instructions/: claim.rs  create_market.rs  mod.rs  reclaim.rs  settle.rs  stake.rs
program/programs/mock-txoracle/: Cargo.toml
program/programs/mock-txoracle/src/: lib.rs
program/programs/settlement-core/src/: lib.rs
program/tests/: Cargo.toml
program/tests/src/: lib.rs
program/tests/tests/: settlement_tests.rs
scripts/: test-rings.sh
(+4 files in other folders)
