[project]
name = "agentforge-backend"
version = "0.0.1"
description = "AgentForge Markets backend — agent runtime + on-chain client (devnet-only)"
requires-python = ">=3.11"
# The agent core is self-contained stdlib (the TxLINE feed reads its own spec and calls the
# API directly via urllib); solders is the only runtime dep, for the on-chain client.
dependencies = [
    "solders>=0.21",
]

[dependency-groups]
dev = [
    "ruff>=0.6",
    "mypy>=1.11",
    "pytest>=8.0",
]

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.mypy]
python_version = "3.11"
packages = ["agentforge"]
