[workspace]
# Explicit members (not a `programs/*` glob): the Mollusk test crate lives at
# `tests/`, and a glob would try to load it as a Solana program and fail. Listing
# members explicitly is unambiguous.
members = [
    "programs/forge-markets",
    # TEST DOUBLE for txoracle::validate_stat — Mollusk-only, never in Anchor.toml
    # (no devnet deploy target). See programs/mock-txoracle/src/lib.rs.
    "programs/mock-txoracle",
    "tests",
]
resolver = "2"

# Inherited by the member crates (they declare `edition/license/repository =
# { workspace = true }`).
[workspace.package]
edition = "2021"
license = "MIT"
repository = "https://github.com/GeckoVision/agent-forge"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
