[package]
name = "forge-markets"
version = "0.1.0"
description = "AgentForge Markets — trustless prediction escrow settled by a CPI into TxODDS txoracle::validate_stat. Anchor 1.0. DEVNET-ONLY."
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[lib]
crate-type = ["cdylib", "lib"]
name = "forge_markets"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
# Anchor 1.0.2 — pinned so the whole Cargo workspace resolves on a single
# Solana 3.x crate tree (see Anchor.toml note).
anchor-lang = "1.0.2"
