[package]
name = "mock-txoracle"
version = "0.1.0"
description = "TEST DOUBLE for TxODDS txoracle::validate_stat. Mollusk-only, NEVER deployed. See src/lib.rs."
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[lib]
crate-type = ["cdylib", "lib"]
name = "mock_txoracle"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "1.0.2"
